<resources>
    <string name="title_home">Home</string>
    <string name="app_name">Shavit</string>
    <string name="title_agendamentos">Agendamentos</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="servicos">Serviços</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="pedidos">Pedidos</string>
    <string name="perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fragmentAgendamentosText">Fragmento de Agendamentos</string>
    <string name="fragmentPedidosText">Fragmento de Pedidos</string>
    <string name="fragmentServicosText">Fragmento de Serviços</string>
    <string name="fragmentPerfilText">Fragmento de Perfil</string>
    <string name="fragmentServicosListText">Fragmento de lista de serviços</string>
    <string name="fragmentProvedoresListText">Fragment de lista de provedores</string>
    <string name="fragmentPromocoesListText">Fragment de lista de promoções</string>
    <string name="nomeServicoDefault">Nome do Serviço</string>
    <string name="descricaoServicoDefault">Descrição serviço default</string>
    <string name="nomeProvedorDefault">Nome Provedor</string>
    <string name="telefoneProvedorDefault">+XXX  YY ZZZ ZZZZ</string>
    <string name="nomeServicoHint">Nome Serviço</string>
    <string name="descricaoServicoHint">Descrição do Serviço</string>
    <string name="btnConfirmServico">Confirmar</string>
    <string name="btnConfirm">Confirmar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="agendamentoHoraDefault">00H00</string>
    <string name="agendamentoDataDefault">00/00/0000</string>
    <string name="timeSeparator">-</string>
    <string name="provedorIndicador">Provedor: </string>
    <string name="provedorNome">Provedor Y</string>
    <string name="servicoIndicador">Serviço:</string>
    <string name="servicoNome">Serviço X</string>
    <string name="nomeCliente">Nome do cliente</string>
    <string name="horarioDefault">00:00</string>
    <string name="horarioHint">Horário</string>
    <string name="nomeClientDefault">Client X</string>
    <string name="dataHint">Data</string>
    <string name="dataDefault">XX/YY/ZZZZ</string>
    <string name="servicoHint">Serviço</string>
    <string name="provedoresSpinnerPrompt">Provedores...</string>
    <string name="hintProvedores">Provedor</string>
    <string name="btnAcceptPedido">Aceitar</string>
    <string name="btnDecline">Recusar</string>
    <string name="duracaoEmMinutosHint">Duração (em minutos)</string>
    <string name="observacaoHint">Observação</string>
    <string name="precoHint">Preço (€)</string>
    <string name="btnRealizadoText">Marcar Como Realizado</string>
    <string name="btnCancelarAgendamentoClinica">Cancelar Agendamento</string>
    <string name="btnCancelarAgendamentoClinicaText">Cancelar Agendamento</string>
    <string name="btnCancelText">Voltar</string>
    <string name="btnBackText">Voltar</string>
    <string name="nomeProvedorHint">Provedor</string>
    <string name="nomePerfil">Nome</string>
    <string name="btnLogout">Logout</string>
    <string name="btnEdit">Editar/Concluir</string>
    <string name="emailPerfil">Email</string>
    <string name="moradaPerfil">Morada</string>
    <string name="nifPerfil">NIF</string>
    <string name="fonePerfil">Telefone</string>
</resources>
