<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.AgendamentoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/activityAgendamento_txtCliente"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomeCliente"
                    android:text="@string/nomeClientDefault"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/activityAgendamento_txtData"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dataHint"
                    android:text="@string/dataDefault"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/activityAgendamento_txtHorario"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/horarioHint"
                    android:text="@string/horarioDefault"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/activityAgendamento_txtServico"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/servicoHint"
                    android:text="@string/servicoNome"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/activityAgendamento_txtProvedor"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomeProvedorHint"
                    android:text="@string/nomeProvedorDefault"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <!-- buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/activityAgendamento_realizado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnRealizadoText"

                    style="@style/ButtonTheme"/>

                <Button
                    android:id="@+id/activityAgendamento_btnCancelarAgendamentoClinica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/btnCancelarAgendamentoClinicaText"

                    style="@style/ButtonTheme"/>

            </LinearLayout>
            
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>