<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.activities.PedidoAvaliacaoActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/grayInputTextFields">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activityPedidoAvaliacao_txtNomeCliente"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomeCliente"
                    android:text="@string/nomeClientDefault"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/grayInputTextFields">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activityPedidoAvaliacao_txtData"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dataHint"
                    android:text="@string/dataDefault"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/grayInputTextFields">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activityPedidoAvaliacao_txtHorario"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/horarioHint"
                    android:text="@string/horarioDefault"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/grayInputTextFields">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activityPedidoAvaliacao_txtServico"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/servicoHint"
                    android:text="@string/servicoNome"

                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/activityPedidoAvaliacao_spinnerProvedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/provedoresSpinnerPrompt"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:backgroundTint="@android:color/primary_text_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/activityPedidoAvaliacao_btnAceitarPedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnAcceptPedido"

                    style="@style/ButtonTheme"/>

                <Button
                    android:id="@+id/activityPedidoAvaliacao_btnDeclinePedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/btnDecline"

                    style="@style/ButtonTheme"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>