<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/itemPedidoCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="3dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:id="@+id/pedidoDataLayoutWrapper">

                <TextView
                    android:id="@+id/lblPedidoData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agendamentoDataDefault"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/timeSeparator"
                    android:layout_marginHorizontal="4sp"/>

                <TextView
                    android:id="@+id/lblPedidoHora"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agendamentoHoraDefault"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="2dp"
                android:id="@+id/provedorLayoutWrapper"
                android:layout_below="@id/pedidoDataLayoutWrapper">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/servicoIndicador"
                    android:textSize="18sp"
                    android:layout_marginRight="2sp"
                    android:layout_marginEnd="4sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/lblNomeServicoListaPedidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/servicoNome"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>